fixed wonky eoc spacing

--- a/css/ccap-biology.less
+++ b/css/ccap-biology.less
@@ -315,7 +315,7 @@ div.section .titlepage .abstract {
 .free-response > .title { content: "Critical Thinking Questions"; column-span: all; margin-top: 1em; }
 
 .multiple-choice,.free-response,.art-exercise {
-  > .section > .title > a { display: none; }
+  > .section > .title { display: none; }
 }
 
 
